<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.tim.audiotranslator.view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/english"
                        android:textSize="17sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/ic_arrow"
                        android:contentDescription="@string/image_view_arrow"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/german"
                        android:textSize="17sp"/>

                </LinearLayout>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardElevation="3dp"
                    card_view:cardCornerRadius="0dp">

                    <EditText
                        android:id="@+id/et_put_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-light"
                        android:gravity="start"
                        android:hint="@string/put_your_text_here"
                        android:minHeight="100dp"
                        android:padding="10dp"
                        android:textSize="20sp"/>

                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorGrayLight100"/>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    card_view:cardCornerRadius="0dp"
                    card_view:cardElevation="3dp">

                    <TextView
                        android:id="@+id/tv_translation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:minHeight="100dp"
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:textColorHint="@color/colorExtraLight"
                        android:hint="@string/your_translation_will_be_here"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_translate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/ripple_primary"
                    android:fontFamily="sans-serif-light"
                    android:padding="20dp"
                    android:text="@string/translate_button"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"/>

                <Button
                    android:id="@+id/btn_play"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/ripple_primary"
                    android:fontFamily="sans-serif-light"
                    android:padding="20dp"
                    android:text="@string/voice_translation"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"/>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/ripple_primary"
                    android:fontFamily="sans-serif-light"
                    android:padding="20dp"
                    android:text="@string/save_button"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
